<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adhimarino.myapplication.about">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/copyright_2017"
        android:textColor="#111"
        android:id="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/versi_1_0_0"
        android:textColor="#111" />

    <TextView
        android:id="@+id/v8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/adhima_rino_narendra"
        android:textColor="#111" />

    <TextView
        android:id="@+id/v28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/_14_11_8478"
        android:textColor="#111" />

    <TextView
        android:id="@+id/v228"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v28"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/universitas_amikom_yogyakarta"
        android:textColor="#111" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trans_tracker_for_android"
        android:textSize="18sp"
        android:textColor="#111"
        android:gravity="center"

        />



</RelativeLayout>
