<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adhimarino.myapplication.shelter">

    <Button
        android:id="@+id/tigaa"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/tigab"
        android:layout_alignStart="@+id/tigab"
        android:layout_centerVertical="true"
        android:text="@string/_3a"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="260dp" />

    <Button
        android:id="@+id/tigab"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tigaa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/_3b"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="417dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="330dp"
        android:layout_height="105dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="59dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/fdf"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="80dp" />

</RelativeLayout>
